{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 94,
  "lineage": "2e008e27-19ab-ae99-7c52-874bd1ea1255",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "ip_address",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.83.195.75",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2024-02-21T19:10:16.927-08:00",
            "id": "projects/kubernetes-414808/regions/us-west1/addresses/public-kubernetes-the-hard-way-ip",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "public-kubernetes-the-hard-way-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "kubernetes-414808",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/regions/us-west1/addresses/public-kubernetes-the-hard-way-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "external_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "6443"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-02-21T19:10:30.383-08:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kubernetes-414808/global/firewalls/external-kubernetes-the-hard-way-rule",
            "log_config": [],
            "name": "external-kubernetes-the-hard-way-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/global/networks/kubernetes-the-hard-way-vpc",
            "priority": 1000,
            "project": "kubernetes-414808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/global/firewalls/external-kubernetes-the-hard-way-rule",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2024-02-21T19:10:30.902-08:00",
            "deny": [],
            "description": "Creates firewall rule targeting tagged instances",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/kubernetes-414808/global/firewalls/internal-kubernetes-the-hard-way-rule",
            "log_config": [],
            "name": "internal-kubernetes-the-hard-way-rule",
            "network": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/global/networks/kubernetes-the-hard-way-vpc",
            "priority": 1000,
            "project": "kubernetes-414808",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/global/firewalls/internal-kubernetes-the-hard-way-rule",
            "source_ranges": [
              "10.200.0.0/16",
              "10.240.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "controlers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/zones/us-west1-c/disks/k8s-cp-0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/kubernetes-414808/zones/us-west1-c/instances/k8s-cp-0",
            "instance_id": "2683149743214495187",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "PRhwVKeDgRs=",
            "name": "k8s-cp-0",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/global/networks/kubernetes-the-hard-way-vpc",
                "network_ip": "10.240.0.10",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/regions/us-west1/subnetworks/kubernetes-the-hard-way-subnetwork",
                "subnetwork_project": "kubernetes-414808"
              }
            ],
            "project": "kubernetes-414808",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/zones/us-west1-c/instances/k8s-cp-0",
            "service_account": [
              {
                "email": "371474157866-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "controller",
              "k8scp-0",
              "kubernetes-the-hard-way"
            ],
            "tags_fingerprint": "Tak4_Oe-PdU=",
            "zone": "us-west1-c"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/zones/us-west1-c/disks/k8s-cp-1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/kubernetes-414808/zones/us-west1-c/instances/k8s-cp-1",
            "instance_id": "4056290284264949203",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "PRhwVKeDgRs=",
            "name": "k8s-cp-1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/global/networks/kubernetes-the-hard-way-vpc",
                "network_ip": "10.240.0.11",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/regions/us-west1/subnetworks/kubernetes-the-hard-way-subnetwork",
                "subnetwork_project": "kubernetes-414808"
              }
            ],
            "project": "kubernetes-414808",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/zones/us-west1-c/instances/k8s-cp-1",
            "service_account": [
              {
                "email": "371474157866-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "controller",
              "k8scp-1",
              "kubernetes-the-hard-way"
            ],
            "tags_fingerprint": "-GrNciw1vm8=",
            "zone": "us-west1-c"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/zones/us-west1-c/disks/k8s-cp-2"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/kubernetes-414808/zones/us-west1-c/instances/k8s-cp-2",
            "instance_id": "8525924988136130005",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata_fingerprint": "PRhwVKeDgRs=",
            "name": "k8s-cp-2",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/global/networks/kubernetes-the-hard-way-vpc",
                "network_ip": "10.240.0.12",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/regions/us-west1/subnetworks/kubernetes-the-hard-way-subnetwork",
                "subnetwork_project": "kubernetes-414808"
              }
            ],
            "project": "kubernetes-414808",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/zones/us-west1-c/instances/k8s-cp-2",
            "service_account": [
              {
                "email": "371474157866-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "controller",
              "k8scp-2",
              "kubernetes-the-hard-way"
            ],
            "tags_fingerprint": "ZXTySOSy4js=",
            "zone": "us-west1-c"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/zones/us-west1-c/disks/k8s-wrk-0"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/kubernetes-414808/zones/us-west1-c/instances/k8s-wrk-0",
            "instance_id": "4477294304447628754",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "pod-cidr": "10.200.0}.0/24"
            },
            "metadata_fingerprint": "W6vYp45J_4I=",
            "name": "k8s-wrk-0",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/global/networks/kubernetes-the-hard-way-vpc",
                "network_ip": "10.240.0.20",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/regions/us-west1/subnetworks/kubernetes-the-hard-way-subnetwork",
                "subnetwork_project": "kubernetes-414808"
              }
            ],
            "project": "kubernetes-414808",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/zones/us-west1-c/instances/k8s-wrk-0",
            "service_account": [
              {
                "email": "371474157866-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "controller",
              "k8wrk-0",
              "kubernetes-the-hard-way"
            ],
            "tags_fingerprint": "GXeGA4LBu7o=",
            "zone": "us-west1-c"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/zones/us-west1-c/disks/k8s-wrk-1"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/kubernetes-414808/zones/us-west1-c/instances/k8s-wrk-1",
            "instance_id": "5637610574507083221",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "pod-cidr": "10.200.1}.0/24"
            },
            "metadata_fingerprint": "t_UKYa1BXs4=",
            "name": "k8s-wrk-1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/global/networks/kubernetes-the-hard-way-vpc",
                "network_ip": "10.240.0.21",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/regions/us-west1/subnetworks/kubernetes-the-hard-way-subnetwork",
                "subnetwork_project": "kubernetes-414808"
              }
            ],
            "project": "kubernetes-414808",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/zones/us-west1-c/instances/k8s-wrk-1",
            "service_account": [
              {
                "email": "371474157866-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "controller",
              "k8wrk-1",
              "kubernetes-the-hard-way"
            ],
            "tags_fingerprint": "OFm_lasgDTc=",
            "zone": "us-west1-c"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-v20240209",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/zones/us-west1-c/disks/k8s-wrk-2"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/kubernetes-414808/zones/us-west1-c/instances/k8s-wrk-2",
            "instance_id": "2960233833124529623",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-standard-2",
            "metadata": {
              "pod-cidr": "10.200.2}.0/24"
            },
            "metadata_fingerprint": "fbPOBvFCs5Q=",
            "name": "k8s-wrk-2",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/global/networks/kubernetes-the-hard-way-vpc",
                "network_ip": "10.240.0.22",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/regions/us-west1/subnetworks/kubernetes-the-hard-way-subnetwork",
                "subnetwork_project": "kubernetes-414808"
              }
            ],
            "project": "kubernetes-414808",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/zones/us-west1-c/instances/k8s-wrk-2",
            "service_account": [
              {
                "email": "371474157866-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/compute",
                  "https://www.googleapis.com/auth/devstorage.read_only",
                  "https://www.googleapis.com/auth/logging.write",
                  "https://www.googleapis.com/auth/monitoring",
                  "https://www.googleapis.com/auth/service.management.readonly",
                  "https://www.googleapis.com/auth/servicecontrol"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "controller",
              "k8wrk-2",
              "kubernetes-the-hard-way"
            ],
            "tags_fingerprint": "9w-ttrrWeDE=",
            "zone": "us-west1-c"
          },
          "dependencies": [
            "data.google_compute_default_service_account.default",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/kubernetes-414808/global/networks/kubernetes-the-hard-way-vpc",
            "mtu": 0,
            "name": "kubernetes-the-hard-way-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "1296299194108806647",
            "project": "kubernetes-414808",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/global/networks/kubernetes-the-hard-way-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-02-21T19:10:31.503-08:00",
            "gateway_address": "10.240.0.1",
            "id": "projects/kubernetes-414808/regions/us-west1/subnetworks/kubernetes-the-hard-way-subnetwork",
            "ip_cidr_range": "10.240.0.0/24",
            "name": "kubernetes-the-hard-way-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/global/networks/kubernetes-the-hard-way-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "kubernetes-414808",
            "purpose": "PRIVATE",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/kubernetes-414808/regions/us-west1/subnetworks/kubernetes-the-hard-way-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}